# Hangar

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: activity.rs  crypto.rs  files.rs  git.rs  github.rs  junk.rs  mod.rs  mod_ports.rs  pingboard.rs  scanner.rs  search.rs  settings.rs  terminal.rs  timetracker.rs  utils.rs  vault.rs
src/components/: ProjectCard.tsx
src/components/Dashboard/: ContributionsGraph.tsx  GitHubOnlyRepos.tsx  GitHubRepoModal.tsx  JunkDetector.tsx  LangChart.tsx  PortScanner.tsx  StatsGrid.tsx
src/components/Layout/: Sidebar.tsx
src/components/ProjectDetail/: Dependencies.tsx  FileTree.tsx  GitInfo.tsx  NotesPanel.tsx  ReadmeViewer.tsx  Terminal.tsx
src/lib/: tauri.ts
src/pages/: DashboardPage.tsx  GitHubHubPage.tsx  MeridianPage.tsx  PingBoardPage.tsx  ProjectPage.tsx  SearchPage.tsx  VaultkeeperPage.tsx
src/store/: useStore.ts
src/types/: index.ts
