[package]
name = "hangar"
version = "0.2.0"
description = "Hangar – local-first developer project dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "hangar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
tokio             = { version = "1", features = ["full"] }
reqwest           = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
walkdir           = "2"
dirs              = "5"
chrono            = { version = "0.4", features = ["serde"] }
anyhow            = "1"
regex             = "1"
toml              = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
