[package]
name = "hangar"
version = "1.0.0"
description = "Hangar – local-first developer project dashboard"
authors = ["ArdaCTK"]
edition = "2021"

[lib]
name = "hangar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
tokio             = { version = "1", features = ["full"] }
reqwest           = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
walkdir           = "2"
dirs              = "5"
chrono            = { version = "0.4", features = ["serde"] }
anyhow            = "1"
regex             = "1"
toml              = "0.8"

# Vault encryption
aes-gcm           = { version = "0.10", features = ["std"] }
sha2              = "0.10"
base64            = "0.22"
pbkdf2            = "0.12"
rayon             = "1.10"

# FIX: subprocess kullanmadan hostname almak için (güvenlik)
sysinfo           = { version = "0.31", default-features = false, features = ["system"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
